tests/samples/change-flow-bad-syntax.err
change-flow-bad-syntax.flow:3:Syntax error. "ange flow *$second\ndo".
