tests/samples/change-flow-bad-syntax.flow
flow first do
  say "Inside the first dialog"
  change flow $second
done

flow second do
  say "Inside the second dialog"
done
